--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -41,20 +41,21 @@
   
   .is-hidden {
     visibility: hidden;
+    transform: scale(1.1);
   }
   
   .footer-modal {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: #000000b3;
-    transition: opacity 0.3s ease;
-    z-index: 0;
+    background: #303030;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform var(--transition);
+    pointer-events: auto;
   }
   
   .footer-modal.is-visible {
@@ -62,37 +63,51 @@
   }
   
   .modal-content {
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #aba0a0;
-    padding: 20px;
-    text-align: center;
-    z-index: 5;
-    width: 60%;
-    height: 400px;
+    padding: 16px;
+    background-color: #fff;
+    width: 70%;
     margin: 0 auto;
+    height: 70%;
+    position: relative;
+    border-radius: 5px;
+    align-content: center;
   }
   
   .close-footer-modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: absolute;
-    z-index: 10;
     top: 10px;
     right: 10px;
     font-size: 24px;
-    color: #B92F2C;
-    background-color: #333;
-    padding: 5px 10px;
-    border: none;
+    fill: #B92F2C;
+    background-color: #fff;
+    padding: 2px 4px;
     border-radius: 5px;
     cursor: pointer;
+    outline: none;
+    width: 30px;
+    height: 30px;
+    transition: background-color var(--transition);
   }
   
   .close-footer-modal:hover {
     border: 2px solid #B92F2C;
     background: transparent;
   }
+
+.font-title {
+    display: flex;
+    justify-content: center;
+    color: #000;
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    line-height: 23px;
+}
   
   @media screen and (min-width: 768px) {
   
