--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -50,8 +50,16 @@
                 class="close-footer-modal"
                 data-modal-close
                 >
-                &times;
+                <svg 
+                    xmlns="http://www.w3.org/2000/svg" 
+                    width="30" 
+                    height="30" 
+                    viewBox="0 0 30 30"
+                    >
+                    <path d="M8 8L22 22" stroke="black" stroke-width="2"/>
+                    <path d="M8 22L22 8" stroke="black" stroke-width="2"/>
+                </svg>
             </span>
-            Acesta este conținutul modalului.
+            <h1 class="font-title">THE PROJECT WAS MADE BY:</h1>
         </div>
     </div>
