--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -60,6 +60,65 @@
                     <path d="M8 22L22 8" stroke="black" stroke-width="2"/>
                 </svg>
             </span>
-            <h1 class="font-title">THE PROJECT WAS MADE BY:</h1>
+            <h2 class="font-title">THE PROJECT WAS MADE BY:</h2>
+            <div class="content">
+                <div class="card-team-lider card-flex-team-lider">
+                    <img 
+                        class="image-leader rounded-image-leader" 
+                        src="images\logo.png" 
+                        alt="Numele Membrului Echipei"
+                    >
+                    <div class="member-info">
+                        <h3 class="member-name">Bogdan Nemes</h3>
+                        <p class="member-position">Team leader</p>
+                    </div>
+                </div>
+                <div class="content-group">
+                    <div class="card-group">
+                        <img 
+                            class="rounded-image rounded-image-container" 
+                            src="images\logo.png" 
+                            alt="Numele Membrului Echipei"
+                        >
+                        <div class="member-info">
+                            <h3 class="member-name">Dan Retegan</h3>
+                            <p class="member-position">Scrum master</p>
+                        </div>
+                    </div>
+                    <div class="card-group">
+                        <img 
+                            class="rounded-image rounded-image-container" 
+                            src="images\logo.png" 
+                            alt="Numele Membrului Echipei"
+                        >
+                        <div class="member-info">
+                            <h3 class="member-name">Ciprian Ropcean</h3>
+                            <p class="member-position">Frontent developer</p>
+                        </div>
+                    </div>
+                    <div class="card-group">
+                        <img 
+                            class="rounded-image rounded-image-container" 
+                            src="images\logo.png" 
+                            alt="Numele Membrului Echipei"
+                        >
+                        <div class="member-info">
+                            <h3 class="member-name">Andrei Rusu</h3>
+                            <p class="member-position">Frontent developer</p>
+                        </div>
+                    </div>
+                    <div class="card-group">
+                        <img 
+                            class="rounded-image rounded-image-container" 
+                            src="images\logo.png" 
+                            alt="Numele Membrului Echipei"
+                        >
+                        <div class="member-info">
+                            <h3 class="member-name">Simon Khawam</h3>
+                            <p class="member-position">Frontent developer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
