--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -62,8 +62,8 @@
             </span>
             <h2 class="font-title">THE PROJECT WAS MADE BY:</h2>
             <div class="content">
-                <ul class="content-group">
-                    <li class="card-group">
+                <div class="content-group">
+                    <div class="card-group">
                         <img
                             class="rounded-image-container rounded-image" 
                             src="./images/logo.png" 
@@ -105,10 +105,10 @@
                                 <svg 
                                     aria-hidden="true" 
                                     class="octicon octicon-mark-github" 
-                                    height="24" 
+                                    height="20" 
                                     version="1.1" 
                                     viewBox="0 0 16 16" 
-                                    width="24"
+                                    width="20"
                                     >
                                     <path 
                                         fill-rule="evenodd" 
@@ -116,8 +116,8 @@
                                 </svg>
                             </a>
                         </div>
-                    </li>
-                    <li class="card-group">
+                    </div>
+                    <div class="card-group">
                         <img
                             class="rounded-image-container rounded-image" 
                             src="./images/logo.png" 
@@ -159,10 +159,10 @@
                                 <svg 
                                     aria-hidden="true" 
                                     class="octicon octicon-mark-github" 
-                                    height="24" 
+                                    height="20" 
                                     version="1.1" 
                                     viewBox="0 0 16 16" 
-                                    width="24"
+                                    width="20"
                                     >
                                     <path 
                                         fill-rule="evenodd" 
@@ -170,10 +170,10 @@
                                 </svg>
                             </a>
                         </div>
-                    </li>
-                    <li class="card-group">
+                    </div>
+                    <div class="card-group">
                         <img
-                            class="rounded-image-container rounded-image" 
+                            class="rounded-image-container" 
                             src="./images/logo.png" 
                             alt="about christofer"
                         />
@@ -213,10 +213,10 @@
                                 <svg 
                                     aria-hidden="true" 
                                     class="octicon octicon-mark-github" 
-                                    height="24" 
+                                    height="20" 
                                     version="1.1" 
                                     viewBox="0 0 16 16" 
-                                    width="24"
+                                    width="20"
                                     >
                                     <path 
                                         fill-rule="evenodd" 
@@ -224,8 +224,8 @@
                                 </svg>
                             </a>
                         </div>
-                    </li>
-                    <li class="card-group">
+                    </div>
+                    <div class="card-group">
                         <img
                             class="rounded-image-container rounded-image" 
                             src="./images/logo.png" 
@@ -267,10 +267,10 @@
                                 <svg 
                                     aria-hidden="true" 
                                     class="octicon octicon-mark-github" 
-                                    height="24" 
+                                    height="20" 
                                     version="1.1" 
                                     viewBox="0 0 16 16" 
-                                    width="24"
+                                    width="20"
                                     >
                                     <path 
                                         fill-rule="evenodd" 
@@ -278,8 +278,8 @@
                                 </svg>
                             </a>
                         </div>
-                    </li>
-                    <li class="card-group">
+                    </div>
+                    <div class="card-group">
                         <img
                             class="rounded-image-container rounded-image" 
                             src="./images/logo.png" 
@@ -321,10 +321,10 @@
                                 <svg 
                                     aria-hidden="true" 
                                     class="octicon octicon-mark-github" 
-                                    height="24" 
+                                    height="20" 
                                     version="1.1" 
                                     viewBox="0 0 16 16" 
-                                    width="24"
+                                    width="20"
                                     >
                                     <path 
                                         fill-rule="evenodd" 
@@ -332,8 +332,8 @@
                                 </svg>
                             </a>
                         </div>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
