--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -33,6 +33,12 @@
   color: #b92f2c;
 }
 
+.heart-icon-custom {
+  width: 14px;
+  height: 14px;
+  fill: #b92f2c;
+}
+
 .is-hidden {
   visibility: hidden;
   transform: scale(1.1);
@@ -87,6 +93,12 @@
   transition: background-color var(--transition);
 }
 
+.close-icon-custom {
+  width: 12px;
+  height: 12px;
+  fill: #000;
+}
+
 .close-footer-modal:hover {
   border: 2px solid #b92f2c;
   background: transparent;
@@ -137,15 +149,29 @@
   padding: 5px;
 }
 
-@media (min-width: 768px) {
-  .card-group {
-    flex-direction: row;
-  }
+.card-team {
+  border: 2px solid;
+  width: 80%;
+  height: 85%;
+  border-radius: 5px;
+  margin-bottom: 10px;
 }
 
-.card-flex {
-  display: flex;
-  flex-direction: row;
+.icon-cards:hover {
+  background: #b92f2c;
+}
+
+.icon-cards {
+  fill: #000;
+  width: 20px;
+  height: 20px;
+}
+
+.rounded-image-container {
+  display: block;
+  border-radius: 20px;
+  overflow: hidden;
+  width: 45%;
 }
 
 .member-info {
@@ -157,13 +183,6 @@
   justify-content: center;
   gap: 15px;
   align-items: start;
-}
-
-.rounded-image-container {
-  display: block;
-  border-radius: 20px;
-  overflow: hidden;
-  width: 45%;
 }
 
 .team-name {
@@ -203,23 +222,15 @@
   gap: 6px;
 }
 
-.icon-cards:hover {
-  background: #b92f2c;
+
+ /* modal tablet */
+
+ @media screen and (min-width: 768px) {
+  .card-group {
+    flex-direction: row;
+    width: 50%;
+  }
 }
-
-.icon-card {
-  fill: #b92f2c;
-  width: 100%;
-  height: 100%;
-}
-
-/* .icon-card:hover {
-  fill: #000;
-} */
-  
-    /* modal tablet */
-
-  @media screen and (min-width: 768px) {
   
 .font-flex {
   flex-direction: row;
@@ -231,22 +242,13 @@
 }
 
 .content-group {
-    width: 90%;
-    height: calc(100% - 180px);
-    gap: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-/* Stilurile generale pentru carduri */
-.card-team {
-    border: 2px solid;
-    width: 80%;
-    height: 85%;
-    border-radius: 5px;
-    margin-bottom: 10px;
+  width: 90%;
+  height: calc(100% - 180px);
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .modal-content {
@@ -265,12 +267,6 @@
 
 .team-function {
   font-size: 12px;
-}
-
-.card-group {
-  width: 50%; /* sau orice altă valoare potrivită pentru ecranele de dimensiuni medii */
-}
-
 }
 
 
