--- a/src/css/header.css
+++ b/src/css/header.css
@@ -10,6 +10,20 @@ body {
   color: #fff; /* Set text color for dark mode */
 }
 
+  
+  @keyframes rotation {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  } 
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
 header {
   display: flex;
   justify-content: center;
@@ -125,6 +139,13 @@ header {
 }
 .search-icon {
   width: 24px;
+}
+
+.searchError {
+    margin-top: 7px;
+    margin-left: 5px;
+    color: #fff;
+    font-size: 14px;
 }
 
 .btn-container-1 {
