--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -1,11 +1,13 @@
 /* Stilurile pentru card */
 .movie-card {
-  box-sizing: border-box;
-  width: 100%;
-  max-width: 280px;
-  height: auto;
   border-radius: 20px;
-  margin: 20px auto; /* Spațierea între carduri */
+  box-sizing: border-box;
+  height: auto;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  width: 100%;
 }
 
 /* Stilurile pentru titlu */
@@ -14,8 +16,8 @@
   font-family: 'Roboto', sans-serif;
   font-size: 1em;
   font-weight: 500;
-  text-transform: uppercase;
   margin: 10px 0 0 0;
+  text-transform: uppercase;
 }
 
 /* Stilurile pentru descriere */
@@ -30,14 +32,14 @@
 
 /* Stilurile pentru imaginea din card */
 .movie-card .movie-image {
-  width: 100%; /* Asigură că imaginea ocupă întreaga lățime a cardului */
+  border-radius: 20px; /* Adaugă raza la colțurile imaginii pentru a se potrivi cu cardul */
+  cursor: pointer;
   height: auto; /* Asigură că imaginea ocupă întreaga înălțime a cardului */
   object-fit: cover; /* Redimensionează imaginea astfel încât să acopere întregul container, păstrând proporțiile */
-  border-radius: 20px; /* Adaugă raza la colțurile imaginii pentru a se potrivi cu cardul */
+  width: 100%; /* Asigură că imaginea ocupă întreaga lățime a cardului */
   box-shadow: 0 4px 8px 0 rgba(185, 47, 44, 0.2),
     0 6px 20px 0 rgba(185, 47, 44, 0.19);
   transition: transform 0.3s ease;
-  cursor: pointer;
 }
 
 .movie-card .movie-image:hover,
@@ -47,20 +49,19 @@
 
 /* Fixed button */
 .fixedbutton {
-  width: 40px;
-  height: 40px;
-  border: none;
   background-color: transparent;
+  border: none;
+  bottom: 120px;
   position: fixed;
-  bottom: 245px;
   right: 20px;
   transition: transform 0.3s ease;
+  width: 60px;
 }
 
 .fixedbutton img {
-  width: 100%;
   height: 100%;
   object-fit: contain;
+  width: 100%;
 }
 
 .fixedbutton:hover {
@@ -73,31 +74,29 @@
 }
 
 @media screen and (min-width: 768px) {
-  .movie-card {
-    display: inline-block;
-    margin: 20px; /* Spațiere între carduri */
-  }
-
-  .movie-card:nth-child(odd) {
-    margin-right: 20px; /* Spațierea cardurilor impare pe partea dreaptă */
-  }
-
-  .movie-card:nth-child(even) {
-    margin-left: 20px; /* Spațierea cardurilor pare pe partea stângă */
-  }
-
-  /* Centrarea cardurilor */
   .movie-container {
     display: flex;
     flex-wrap: wrap;
+    gap: 20px;
     justify-content: center;
-    margin: 20px 60px;
+    margin: 20px;
   }
 
-  .fixedbutton {
-    bottom: 125px;
+  .movie-card {
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0;
+    width: calc(50% - 10px);
   }
 }
 
 @media screen and (min-width: 1280px) {
+  .movie-container {
+    gap: 20px;
+    margin: 20px auto;
+    width: 1216px;
+  }
+  .movie-card {
+    width: calc(33.33% - 14px);
+  }
 }
