--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -47,6 +47,45 @@
   transform: scale(1.03);
 }
 
+/* Pagination */
+
+.center {
+  text-align: center;
+}
+
+.pagination {
+  display: inline-block;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.pagination a {
+  color: #000;
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px; /* 133.333% */
+  color: black;
+  float: left;
+  padding: 8px 12px;
+  text-decoration: none;
+  transition: background-color 0.3s;
+  /* margin: 0 4px; */
+}
+
+.pagination a.active {
+  background-color: #b92f2c;
+  color: white;
+  border: 1px solid #b92f2c;
+  border-radius: 5px;
+}
+
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
+  border-radius: 5px;
+}
+
 /* Fixed button */
 .fixedbutton {
   background-color: transparent;
