--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -51,10 +51,10 @@
                 alt="close-icon"
                 >
             </span>
-            <h2 class="font-title">THE PROJECT WAS MADE BY:</h2>
+            <h2 class="font-title">Made by:</h2>
             <div class="content">
-                <div class="content-group">
-                    <div class="card-group">
+                <div class="group-content">
+                    <div class="group-card">
                         <img
                             class="rounded-image-container rounded-image" 
                             src="./images/logo.png" 
@@ -62,7 +62,7 @@
                         />
                         <div class="member-info">
                             <span class="team-name">Bogdan Nemes</span>
-                        <em class="team-function ">Team leader</em>
+                            <em class="team-function ">Team leader</em>
                         </div>
                         <div class="icon-div-cards">
                             <img
@@ -77,7 +77,7 @@
                             >
                         </div>
                     </div>
-                    <div class="card-group">
+                    <div class="group-card">
                         <img
                             class="rounded-image-container rounded-image" 
                             src="./images/logo.png" 
@@ -100,7 +100,7 @@
                             >
                         </div>
                     </div>
-                    <div class="card-group">
+                    <div class="group-card">
                         <img
                             class="rounded-image-container" 
                             src="./images/logo.png" 
@@ -108,7 +108,7 @@
                         />
                         <div class="member-info">
                             <span class="team-name">Ciprian Ropcean</span>
-                        <em class="team-function ">Frontent developer</em>
+                        <em class="team-function ">Frontend developer</em>
                         </div>
                         <div class="icon-div-cards">
                             <img
@@ -123,7 +123,7 @@
                             >
                         </div>
                     </div>
-                    <div class="card-group">
+                    <div class="group-card">
                         <img
                             class="rounded-image-container rounded-image" 
                             src="./images/logo.png" 
@@ -131,7 +131,7 @@
                         />
                         <div class="member-info">
                             <span class="team-name">Andrei Rusu</span>
-                        <em class="team-function ">Frontent developer</em>
+                        <em class="team-function ">Frontend developer</em>
                         </div>
                         <div class="icon-div-cards">
                             <img
@@ -146,7 +146,7 @@
                             >
                         </div>
                     </div>
-                    <div class="card-group">
+                    <div class="group-card">
                         <img
                             class="rounded-image-container rounded-image" 
                             src="./images/logo.png" 
@@ -154,7 +154,7 @@
                         />
                         <div class="member-info">
                             <span class="team-name">Simon Khawam</span>
-                        <em class="team-function ">Frontent developer</em>
+                        <em class="team-function ">Frontend developer</em>
                         </div>
                         <div class="icon-div-cards">
                             <img
