--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,6 +1,39 @@
+:root {
+  --step--2: clamp(0.4338rem, 0.3383rem + 0.4771vw, 0.72rem);
+  --step--1: clamp(0.5206rem, 0.3942rem + 0.6323vw, 0.9rem);
+  --step-0: clamp(0.625rem, 0.4583rem + 0.8333vw, 1.125rem);
+  --step-1: clamp(0.75rem, 0.5313rem + 1.0938vw, 1.4063rem);
+  --step-2: clamp(0.9rem, 0.614rem + 1.4302vw, 1.7581rem);
+  --step-3: clamp(1.08rem, 0.7075rem + 1.8625vw, 2.1975rem);
+  --step-4: clamp(1.2963rem, 0.8127rem + 2.4177vw, 2.7469rem);
+  --step-5: clamp(1.555rem, 0.929rem + 3.1302vw, 3.4331rem);
+  --space-3xs: clamp(0.1875rem, 0.1458rem + 0.2083vw, 0.3125rem);
+  --space-2xs: clamp(0.3125rem, 0.2292rem + 0.4167vw, 0.5625rem);
+  --space-xs: clamp(0.5rem, 0.375rem + 0.625vw, 0.875rem);
+  --space-s: clamp(0.625rem, 0.4583rem + 0.8333vw, 1.125rem);
+  --space-m: clamp(0.9375rem, 0.6875rem + 1.25vw, 1.6875rem);
+  --space-l: clamp(1.25rem, 0.9167rem + 1.6667vw, 2.25rem);
+  --space-xl: clamp(1.875rem, 1.375rem + 2.5vw, 3.375rem);
+  --space-2xl: clamp(2.5rem, 1.8333rem + 3.3333vw, 4.5rem);
+  --space-3xl: clamp(3.75rem, 2.75rem + 5vw, 6.75rem);
+
+  /* One-up pairs */
+  --space-3xs-2xs: clamp(0.1875rem, 0.0625rem + 0.625vw, 0.5625rem);
+  --space-2xs-xs: clamp(0.3125rem, 0.125rem + 0.9375vw, 0.875rem);
+  --space-xs-s: clamp(0.5rem, 0.2917rem + 1.0417vw, 1.125rem);
+  --space-s-m: clamp(0.625rem, 0.2708rem + 1.7708vw, 1.6875rem);
+  --space-m-l: clamp(0.9375rem, 0.5rem + 2.1875vw, 2.25rem);
+  --space-l-xl: clamp(1.25rem, 0.5417rem + 3.5417vw, 3.375rem);
+  --space-xl-2xl: clamp(1.875rem, 1rem + 4.375vw, 4.5rem);
+  --space-2xl-3xl: clamp(2.5rem, 1.0833rem + 7.0833vw, 6.75rem);
+
+  /* Custom pairs */
+  --space-s-l: clamp(0.625rem, 0.0833rem + 2.7083vw, 2.25rem);
+} 
 
 .footer {
   background: #f7f7f7;
+  margin: 0;
 }
 
 .body-content {
@@ -16,7 +49,7 @@
   justify-content: center;
   align-items: center;
   flex-shrink: 0;
-  gap: 10px;
+  gap: var(--step-1);
 }
 
 .font-size {
@@ -67,8 +100,8 @@
   padding: 25px 10px;
   background-color: #fff;
   margin: 0 auto;
-  width: 90%;
-  max-height: 95%;
+  width: 400px;
+  height: auto;
   position: relative;
   border-radius: 20px;
   align-content: center;
@@ -85,23 +118,28 @@
   fill: #b92f2c;
   background-color: #fff;
   padding: 2px 4px;
-  border-radius: 5px;
+  border-radius: 12px;
   cursor: pointer;
   outline: none;
-  width: 30px;
-  height: 30px;
+  /* width: 30px;
+  height: 30px; */
+  width: var(--step-3);
+  height: var(--step-3);
   transition: background-color var(--transition);
-}
-
-.close-icon-custom {
-  width: 12px;
-  height: 12px;
-  fill: #000;
 }
 
 .close-footer-modal:hover {
   border: 2px solid #b92f2c;
   background: transparent;
+}
+
+.close-icon-custom {
+  width: var(--step--2);
+  height: var(--step--2);
+}
+
+.close-icon-custom:hover {
+  fill: #b92f2c;
 }
 
 .font-title {
@@ -110,43 +148,43 @@
   justify-content: center;
   align-items: center;
   font-family: Roboto;
-  font-size: clamp(10px, 12px, 18px);
+  /* font-size: clamp(10px, 12px, 18px); */
   font-style: normal;
   font-weight: 500;
   line-height: clamp(12px, 14px, 20px);
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
+  font-size: var(--step--1);
 }
 
 .content {
-  width: 100%;
-  min-height: 90%;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-
-.content-group {
-  width: 100%;
-  height: calc(100% - 180px);
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  gap: 10px;
+  /* width: 95%; */
+  height: auto;
   list-style-type: none;
+  margin: 0 auto;
 }
 
-.card-group {
+.group-content {
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.group-card {
   border: 2px solid #b92f2c;
-  width: 90%;
+  width: 95%;
   border-radius: 20px;
-  height: 75%;
+  height: auto;
   display: flex;
   flex-direction: row;
   gap: 10px;
   padding: 5px;
+  box-shadow: 5px 5px 14px -3px rgba(185,47,44,0.67);
+-webkit-box-shadow: 5px 5px 14px -3px rgba(185,47,44,0.67);
+-moz-box-shadow: 5px 5px 14px -3px rgba(185,47,44,0.67);
 }
 
 .card-team {
@@ -171,7 +209,11 @@
   display: block;
   border-radius: 20px;
   overflow: hidden;
-  width: 45%;
+  margin: 0 auto;
+	max-width: 125px;
+	height: 110px;
+	object-fit: cover;
+  border:  2px solid #b92f2c;
 }
 
 .member-info {
@@ -180,6 +222,7 @@
   flex-direction: column;
   padding: 10px;
   box-sizing: border-box;
+  align-items: center;
   justify-content: center;
   gap: 15px;
   align-items: start;
@@ -188,7 +231,8 @@
 .team-name {
   color: #000;
   text-align: center;
-  font-size: 12px;
+  font-size: var(--step-0);
+  line-height: var(--step--1);
   font-style: normal;
   font-weight: 500;
   line-height: normal;
@@ -199,7 +243,8 @@
 .team-function {
   color: #757575;
   text-align: center;
-  font-size: 10px;
+  font-size: var(--step--2);
+  line-height: var(--step--1);
   font-style: normal;
   font-weight: 500;
   line-height: 133.333%;
@@ -214,96 +259,154 @@
   flex-direction: column;
   flex-shrink: 0;
   align-items: center;
+  align-content: center;
   justify-content: center;
   border-radius: 100px;
-  border: 1px solid #000;
+  border: 2px solid #b92f2c;
   padding: 14px;
   display: flex;
   gap: 6px;
+  align-self: center;
 }
 
 
  /* modal tablet */
 
  @media screen and (min-width: 768px) {
-  .card-group {
-    flex-direction: row;
-    width: 50%;
-  }
+
+.close-footer-modal {
+  width: var(--step-4);
+  height: var(--step-4);
+}
+
+.close-icon-custom {
+    width: var(--step--1);
+    height: var(--step--1);
+}
+
+.group-card {
+  flex-direction: row;
+  min-width: 270px;
 }
   
 .font-flex {
   flex-direction: row;
-  gap: 10px;
+  gap: var(--step-1);
 }
   
 .font-size {
-  font-size: 16px;
+  font-size: var(--step-2);
 }
 
-.content-group {
-  width: 90%;
-  height: calc(100% - 180px);
-  gap: 10px;
-  display: flex;
-  flex-direction: column;
+.modal-content {
+  width: 55%;
+  min-height: 552px;
+  flex-shrink: 0;
+}
+
+.font-title {
+  font-size: var(--step-0);
+  line-height: calc(var(--step-1) + 3px);
+}
+
+.team-name {
+  font-size: var(--step-1);
+  line-height: var(--step-2);
+}
+
+.team-function {
+  font-size: var(--step-0);
+  line-height: var(--step-1);
+}
+
+.group-content {.parent {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  }
+}
+
+.member-info {
+  flex-direction: row;
   align-items: center;
   justify-content: center;
 }
 
-.modal-content {
-  width: 70%;
-  max-height: 95%;
+.icon-div-cards {
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
-
-.font-title {
-    font-size: 20px;
-    line-height: 23px;
-}
-
-.team-name {
-  font-size: 14px;
-}
-
-.team-function {
-  font-size: 12px;
 }
 
 
   /* modal desktop */
 
 @media screen and (min-width: 1280px) {
+
+.close-footer-modal {
+  width: var(--step-5);
+  height: var(--step-5);
+}
+
+.close-icon-custom {
+  width: var(--step-0);
+  height: var(--step-0);
+}
   
 .body-content {
   flex-direction: row;
 }
+
+.group-content {.parent {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  }
+}
     
 .font-size {
-  font-size: 16px;
-}
+  font-size: var(--step-1);
+  }
 
 .font-title {
-  font-size: 30px;
-  line-height: 35px;
+  font-size: var(--step-0);
+  line-height: calc(var(--step-1) + 3px);
 }
 
 .modal-content {
-  width: 65%;
-  max-height: 95%;
+  width: 50%;
+  height: auto;
+  min-height: 558px;
+  flex-shrink: 0;
 }
 
 .team-name {
-  font-size: 16px;
+  font-size: var(--step-2);
+  line-height: var(--step-3);
 }
 
 .team-function {
-  font-size: 14px;
+  font-size: var(--step-1);
+  line-height: var(--step-2);
 }
 
-.card-group {
-  width: 50%;
+.group-card {
+  min-width: 270px;
   flex-direction: row;
 }
 
+.member-info {
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
-  
+
+.icon-div-cards {
+  flex-direction: row;
+}
+}
