--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,5 +1,5 @@
-:root {
-  --step--2: clamp(0.4338rem, 0.3383rem + 0.4771vw, 0.72rem);
+/* :root { */
+  /* --step--2: clamp(0.4338rem, 0.3383rem + 0.4771vw, 0.72rem);
   --step--1: clamp(0.5206rem, 0.3942rem + 0.6323vw, 0.9rem);
   --step-0: clamp(0.625rem, 0.4583rem + 0.8333vw, 1.125rem);
   --step-1: clamp(0.75rem, 0.5313rem + 1.0938vw, 1.4063rem);
@@ -15,21 +15,21 @@
   --space-l: clamp(1.25rem, 0.9167rem + 1.6667vw, 2.25rem);
   --space-xl: clamp(1.875rem, 1.375rem + 2.5vw, 3.375rem);
   --space-2xl: clamp(2.5rem, 1.8333rem + 3.3333vw, 4.5rem);
-  --space-3xl: clamp(3.75rem, 2.75rem + 5vw, 6.75rem);
+  --space-3xl: clamp(3.75rem, 2.75rem + 5vw, 6.75rem); */
 
   /* One-up pairs */
-  --space-3xs-2xs: clamp(0.1875rem, 0.0625rem + 0.625vw, 0.5625rem);
-  --space-2xs-xs: clamp(0.3125rem, 0.125rem + 0.9375vw, 0.875rem);
-  --space-xs-s: clamp(0.5rem, 0.2917rem + 1.0417vw, 1.125rem);
+  /* --space-3xs-2xs: clamp(0.1875rem, 0.0625rem + 0.625vw, 0.5625rem); */
+  /* --space-2xs-xs: clamp(0.3125rem, 0.125rem + 0.9375vw, 0.875rem); */
+  /* --space-xs-s: clamp(0.5rem, 0.2917rem + 1.0417vw, 1.125rem);
   --space-s-m: clamp(0.625rem, 0.2708rem + 1.7708vw, 1.6875rem);
   --space-m-l: clamp(0.9375rem, 0.5rem + 2.1875vw, 2.25rem);
   --space-l-xl: clamp(1.25rem, 0.5417rem + 3.5417vw, 3.375rem);
   --space-xl-2xl: clamp(1.875rem, 1rem + 4.375vw, 4.5rem);
-  --space-2xl-3xl: clamp(2.5rem, 1.0833rem + 7.0833vw, 6.75rem);
+  --space-2xl-3xl: clamp(2.5rem, 1.0833rem + 7.0833vw, 6.75rem); */
 
   /* Custom pairs */
-  --space-s-l: clamp(0.625rem, 0.0833rem + 2.7083vw, 2.25rem);
-} 
+  /* --space-s-l: clamp(0.625rem, 0.0833rem + 2.7083vw, 2.25rem); */
+/* }  */
 
 .footer {
   background: #f7f7f7;
