--- a/src/css/header.css
+++ b/src/css/header.css
@@ -195,8 +195,8 @@ header {
   box-sizing: border-box;
 }
 .btn-52 {
-  -webkit-tap-highlight-color: transparent;
-  -webkit-appearance: button;
+  /* -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: button; */
   background-color: #fff;
   background-image: none;
   color: #000;
@@ -206,7 +206,7 @@ header {
     Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   font-size: 100%;
   margin: 0;
-  -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
+  /* -webkit-mask-image: -webkit-radial-gradient(#000, #fff); */
   padding: 0;
 }
 .btn-52:disabled {
@@ -280,8 +280,8 @@ header {
   box-sizing: border-box;
 }
 .btn-53 {
-  -webkit-tap-highlight-color: transparent;
-  -webkit-appearance: button;
+  /* -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: button; */
   background-color: #000;
   background-image: none;
   color: #fff;
@@ -291,7 +291,7 @@ header {
     Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   font-size: 100%;
   margin: 0;
-  -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
+  /* -webkit-mask-image: -webkit-radial-gradient(#000, #fff); */
   padding: 0;
 }
 .btn-53:disabled {
@@ -302,7 +302,7 @@ header {
 }
 .btn-53 svg {
   display: block;
-  vertical-align: middle;
+  /* vertical-align: middle; */
 }
 .btn-53 [hidden] {
   display: none;
@@ -582,3 +582,5 @@ i {
     /* box-shadow: 0px 3px 10px 0px rgba(255, 255, 255, 0.75); */
   }
 }
+
+
