--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,29 +1,29 @@
 <footer class="footer">
     <div 
-        class="body-content"
+        class="footer-body-content"
         >
-        <p class="font-size font-flex">
+        <p class="footer-font-size footer-font-flex">
             &#169;
-            <span class="currentYear"></span> 
+            <span class="footer-currentYear"></span> 
             &#10072; All Rights Reserved &#10072;
         </p>
         <div
-            class="font-flex">
-            <p class="font-size">
+            class="footer-font-flex">
+            <p class="footer-font-size">
                 &thinsp;Developed with
             </p>
             <img
-                class="heart-icon-custom" 
+                class="footer-heart-icon-custom" 
                 src="./images/heart-footer.svg" 
                 alt="heart-icon"
             >        
-            <p class="font-size">
+            <p class="footer-font-size">
                 by&thinsp;
                 <a 
                     href="#"
                     role="button"
-                    class="color-font"
-                    data-modal-open
+                    class="footer-color-font"
+                    footer-data-modal-open
                     >
                     GoIT Romania &#10072; &#8249;&#8260;&#8250; DivMasters
                 </a>
@@ -37,133 +37,133 @@
 <!-- modal section -->
 
     <div 
-        class="footer-modal is-hidden"
-        data-modal
+        class="footer-modal footer-is-hidden"
+        footer-data-modal
         >
-        <div class="modal-content">
+        <div class="footer-modal-content">
             <span 
-                class="close-footer-modal"
-                data-modal-close
+                class="footer-modal-close"
+                footer-data-modal-close
                 >
                 <img
-                class="close-icon-custom" 
+                class="footer-close-icon" 
                 src="./images/close-button.svg" 
                 alt="close-icon"
                 >
             </span>
-            <h2 class="font-title">Made by:</h2>
-            <div class="content">
-                <div class="group-content">
-                    <div class="group-card">
+            <h2 class="footer-font-title">Made by:</h2>
+            <div class="footer-content">
+                <div class="footer-cards">
+                    <div class="footer-team-card">
                         <img
-                            class="rounded-image-container rounded-image" 
-                            src="./images/logo.png" 
-                            alt="about christofer"
+                            class="footer-image-container" 
+                            src="./images/bogdan-nemes.jpg" 
+                            alt="Bogdan Nemes"
                         />
-                        <div class="member-info">
-                            <span class="team-name">Bogdan Nemes</span>
-                            <em class="team-function ">Team leader</em>
+                        <div class="footer-member-info">
+                            <span class="footer-team-name">Bogdan Nemes</span>
+                            <em class="footer-team-function">Team leader</em>
                         </div>
-                        <div class="icon-div-cards">
+                        <div class="footer-icon-cards">
                             <img
-                                class="icon-cards" 
+                                class="footer-icon" 
                                 src="./images/linkedin-footer.svg" 
                                 alt="linkedin"
                             >
                             <img
-                                class="icon-cards" 
+                                class="footer-icon" 
                                 src="./images/github-footer.svg" 
                                 alt="github"
                             >
                         </div>
                     </div>
-                    <div class="group-card">
+                    <div class="footer-team-card">
                         <img
-                            class="rounded-image-container rounded-image" 
-                            src="./images/logo.png" 
-                            alt="about christofer"
+                            class="footer-image-container" 
+                            src="./images/dan_retegan.jpg" 
+                            alt="Dan Retegan"
                         />
-                        <div class="member-info">
-                            <span class="team-name">Dan Retegan</span>
-                        <em class="team-function ">Scrum master</em>
+                        <div class="footer-member-info">
+                            <span class="footer-team-name">Dan Retegan</span>
+                        <em class="footer-team-function">Scrum master</em>
                         </div>
-                        <div class="icon-div-cards">
+                        <div class="footer-icon-cards">
                             <img
-                                class="icon-cards" 
+                                class="footer-icon" 
                                 src="./images/linkedin-footer.svg" 
                                 alt="linkedin"
                             >
                             <img
-                                class="icon-cards" 
+                                class="footer-icon" 
                                 src="./images/github-footer.svg" 
                                 alt="github"
                             >
                         </div>
                     </div>
-                    <div class="group-card">
+                    <div class="footer-team-card">
                         <img
-                            class="rounded-image-container" 
-                            src="./images/logo.png" 
-                            alt="about christofer"
+                            class="footer-image-container" 
+                            src="./images/ciprian-ropcean.jpg" 
+                            alt="Ciprian Ropcean"
                         />
-                        <div class="member-info">
-                            <span class="team-name">Ciprian Ropcean</span>
-                        <em class="team-function ">Frontend developer</em>
+                        <div class="footer-member-info">
+                            <span class="footer-team-name">Ciprian Ropcean</span>
+                        <em class="footer-team-function">Frontend developer</em>
                         </div>
-                        <div class="icon-div-cards">
+                        <div class="footer-icon-cards">
                             <img
-                                class="icon-cards" 
+                                class="footer-icon" 
                                 src="./images/linkedin-footer.svg" 
                                 alt="linkedin"
                             >
                             <img
-                                class="icon-cards" 
+                                class="footer-icon" 
                                 src="./images/github-footer.svg" 
                                 alt="github"
                             >
                         </div>
                     </div>
-                    <div class="group-card">
+                    <div class="footer-team-card">
                         <img
-                            class="rounded-image-container rounded-image" 
+                            class="footer-image-container" 
                             src="./images/logo.png" 
-                            alt="about christofer"
+                            alt="Andrei Rusu"
                         />
-                        <div class="member-info">
-                            <span class="team-name">Andrei Rusu</span>
-                        <em class="team-function ">Frontend developer</em>
+                        <div class="footer-member-info">
+                            <span class="footer-team-name">Andrei Rusu</span>
+                        <em class="footer-team-function">Frontend developer</em>
                         </div>
-                        <div class="icon-div-cards">
+                        <div class="footer-icon-cards">
                             <img
-                                class="icon-cards" 
+                                class="footer-icon" 
                                 src="./images/linkedin-footer.svg" 
                                 alt="linkedin"
                             >
                             <img
-                                class="icon-cards" 
+                                class="footer-icon" 
                                 src="./images/github-footer.svg" 
                                 alt="github"
                             >
                         </div>
                     </div>
-                    <div class="group-card">
+                    <div class="footer-team-card">
                         <img
-                            class="rounded-image-container rounded-image" 
+                            class="footer-image-container" 
                             src="./images/logo.png" 
-                            alt="about christofer"
+                            alt="Simon Khawam"
                         />
-                        <div class="member-info">
-                            <span class="team-name">Simon Khawam</span>
-                        <em class="team-function ">Frontend developer</em>
+                        <div class="footer-member-info">
+                            <span class="footer-team-name">Simon Khawam</span>
+                            <em class="footer-team-function">Frontend developer</em>
                         </div>
-                        <div class="icon-div-cards">
+                        <div class="footer-icon-cards">
                             <img
-                                class="icon-cards" 
+                                class="footer-icon" 
                                 src="./images/linkedin-footer.svg" 
                                 alt="linkedin"
                             >
                             <img
-                                class="icon-cards" 
+                                class="footer-icon" 
                                 src="./images/github-footer.svg" 
                                 alt="github"
                             >
