modal movie card initial setup
modal.css complet comentat. Trebuie complet refacut.

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,3 +1,5 @@
+<!-- gallery.html -->
+
 <section class="gallery" id="gallery">
   <div class="movie-container">
     <!-- Aici vor fi afișate cardurile filmelor -->
