--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -90,8 +90,8 @@ Custom pairs
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
-  pointer-events: auto;
+  transition: 400ms cubic-bezier(0.4, 0, 0.2, 1);
+  pointer-events: visiblePainted;
 }
 
 .footer-modal.is-visible {
@@ -130,7 +130,6 @@ Custom pairs
   outline: none;
   width: clamp(1.08rem, 0.7075rem + 1.8625vw, 2.1975rem);
   height: clamp(1.08rem, 0.7075rem + 1.8625vw, 2.1975rem);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-modal-close:hover {
@@ -200,6 +199,7 @@ Custom pairs
 
 .footer-icon:hover {
   background: #b92f2c;
+  cursor: pointer;
 }
 
 .footer-icon {
