--- a/src/css/search-movies.css
+++ b/src/css/search-movies.css
@@ -1,3 +1,12 @@
+.resultContainer {
+    display: none;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    margin: 20px;
+  }
+
+
 /* Stilurile pentru card */
 .movie-card-search {
     border-radius: 20px;
@@ -53,7 +62,6 @@
 
 @media screen and (min-width: 376px) {
     .resultContainer {
-      display: flex;
       flex-wrap: wrap;
       gap: 20px;
       justify-content: center;
@@ -70,7 +78,6 @@
   
   @media screen and (min-width: 768px) {
     .resultContainer {
-      display: flex;
       flex-wrap: wrap;
       gap: 20px;
       justify-content: center;
@@ -90,6 +97,7 @@
       gap: 20px;
       margin: 20px auto;
       width: 1216px;
+      min-height: 500px;
     }
     .movie-card-search {
       width: calc(25% - 15px);
