Creating the connection between the modal and the card

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -2,24 +2,9 @@
 
 <section class="modal-movie-card hidden">
   <div class="flex">
-    <img
-      src="https://avatars.githubusercontent.com/u/62628408?s=96&v=4"
-      width="150px"
-      height="150px"
-      alt="user"
-    />
     <button class="modal-movie-card-close">⨉</button>
   </div>
-  <div>
-    <h3>Stay in touch</h3>
-    <p>
-      This is a dummy newsletter form so don't bother trying to test it. Not
-      that I expect you to, anyways.
-    </p>
-  </div>
-
-  <input type="email" id="email" placeholder="brendaneich@js.com" />
-  <button class="btn">Do Something</button>
+  <div class="modal-content"></div>
 </section>
 
 <div class="overlay hidden"></div>
