--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1,73 +1,25 @@
-/* modal.css */
-
-/* * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: #222;
-  position: relative;
-  min-height: 100vh;
-  background-color: #b3e6f4;
-}
-
 .modal-movie-card {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  gap: 0.4rem;
-  width: 450px;
-  padding: 1.3rem;
-  min-height: 250px;
-  position: absolute;
-  z-index: 2;
-  top: 20%;
-  background-color: white;
-  border: 1px solid #ddd;
-  border-radius: 15px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  overflow-y: auto;
+  z-index: 51;
+  pointer-events: none;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .modal-movie-card .flex {
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-.modal-movie-card input {
-  padding: 0.7rem 1rem;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  font-size: 0.9em;
-}
-
-.modal-movie-card p {
-  font-size: 0.9rem;
-  color: #777;
-  margin: 0.4rem 0 0.2rem;
-}
-
-button {
-  cursor: pointer;
-  border: none;
-  font-weight: 600;
-}
-
-.btn {
-  display: inline-block;
-  padding: 0.8rem 1.4rem;
-  font-weight: 700;
-  background-color: black;
-  color: white;
-  border-radius: 5px;
-  text-align: center;
-  font-size: 1em;
 }
 
 .btn-open {
@@ -85,16 +37,13 @@ button {
 .overlay {
   position: fixed;
   top: 0;
-  bottom: 0;
   left: 0;
-  right: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(3px);
-  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 50;
 }
 
 .hidden {
   display: none;
-} */
+}
