--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -11,7 +11,7 @@
 }
 
 /* Stilurile pentru titlu */
-.movie-card .movie-title {
+.movie-title {
   color: #000;
   font-family: 'Roboto', sans-serif;
   font-size: 1em;
